--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,8 @@
     "illuminate/support": "5.6.*",
     "roots/sage-lib": "~9.0.9",
     "soberwp/controller": "~2.1.0",
-    "mwdelaney/sage-advanced-custom-fields": "^1.6"
+    "mwdelaney/sage-advanced-custom-fields": "^1.6",
+    "mwdelaney/sage-acf-gutenberg-blocks": "^0.7.0"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.8.0",
