--- a/package.json
+++ b/package.json
@@ -76,6 +76,10 @@
     "yargs": "^16.1.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "bulma": "^0.7.1",
     "jquery": "^3.3.1"
   }
