--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "bulma": "^0.7.1",
+    "filterizr": "^2.2.4",
     "jquery": "^3.3.1"
   }
 }
