--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "bulma": "^0.7.1",
     "filterizr": "^2.2.4",
     "hamburgers": "^1.1.3",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "slick-carousel": "^1.8.1"
   }
 }
