--- a/composer.json
+++ b/composer.json
@@ -34,13 +34,22 @@
     }
   },
   "require": {
-    "php": "^7.2|^7.3|^8.0",
+    "php": "^7.2|^7.3|^7.4|^8.0",
     "composer/installers": "~1.9",
     "illuminate/support": "5.6.*",
     "roots/sage-lib": "~9.0.9",
     "soberwp/controller": "~2.1.0",
     "mwdelaney/sage-advanced-custom-fields": "^1.6",
     "mwdelaney/sage-acf-gutenberg-blocks": "^0.7.0"
+  },
+  "config": {
+    "platform": {
+      "php": "7.4"
+    },
+    "allow-plugins": {
+      "composer/installers": true,
+      "kylekatarnls/update-helper": true
+    }
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^2.8.0",
