--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
     }
   },
   "require": {
-    "php": "^7.3|^8.0",
+    "php": "^7.2|^7.3|^7.4|^8.0",
     "composer/installers": "~1.9",
     "illuminate/support": "5.6.*",
     "roots/sage-lib": "~9.0.9",
